# stupidproject

./: CMakeLists.txt  Makefile  README.md
Debug/: compile_commands.json  config.h
cmake/: config-h.in.cmake
cmake/modules/: EnvChecks.cmake
src/: CMakeLists.txt
src/blk/: CMakeLists.txt  aio.hpp  block_device.cpp  block_device.hpp  io_context.cpp  io_context.hpp  io_queue.cpp
src/blk/kernel/: io_queue.cpp  io_queue.hpp  kernel_device.hpp
src/blk/spdk/: CMakeLists.txt  driver.hpp  driver_queue.cpp  driver_queue.hpp  nvme_device.cpp  nvme_device.hpp  nvme_manager.cpp  nvme_manager.hpp  task.hpp
src/common/: CMakeLists.txt  backtrace.cpp  backtrace.hpp  bit_op.hpp  code_environment.hpp  condition_variable_debug.hpp  dout.cpp  dout.hpp  global.cpp  global.hpp  init.cpp  init.hpp  likely.hpp  lockdep.cpp  lockdep.hpp  mutex.hpp  mutex_debug.cpp  mutex_debug.hpp  signal.cpp  signal.hpp  signal_handler.cpp  signal_handler.hpp  signal_handler_async.cpp  signal_handler_async.hpp  thread.cpp  thread.hpp  util.cpp  util.hpp
test/: test.cpp
test/spdk/: test_spdk.cpp
